# nebius-serverless-cookbook

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
agents/arrow-flight-bridge/: README.md
agents/openclaw/: README.md
inference/vllm-endpoint/: README.md
life-science/openmm-simulation/: .gitignore  DEVELOPER_GUIDE.md  Dockerfile  README.md  pyproject.toml
life-science/openmm-simulation/app/: README.md  app.py
life-science/openmm-simulation/app/.streamlit/: config.toml
life-science/openmm-simulation/scripts/: run_docker.sh  run_serverless.sh  setup.sh
life-science/openmm-simulation/sim/: run.py  utils.py
mlops/video-transcription-pipeline/: .env.example  README.md  justfile  pyproject.toml
mlops/video-transcription-pipeline/src/nebius_pipeline/: __main__.py  flows.py
mlops/video-transcription-pipeline/src/nebius_pipeline/tasks/: extract.py  jobs.py  storage.py
mlops/video-transcription-pipeline/src/video_transcriber_pipeline/: __init__.py  __main__.py  config.py  flows.py
mlops/video-transcription-pipeline/src/video_transcriber_pipeline/tasks/: __init__.py  extract.py  jobs.py  storage.py
robotics/lerobot-finetune-job/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
robotics/lerobot-finetune-job/configs/: act_pusht.yaml
robotics/lerobot-finetune-job/scripts/: run_docker.sh  run_serverless.sh  test_policy_dataset.sh
robotics/lerobot-finetune-job/train/: eval.py  run.py
robotics/smolva-ft-norma-core/: .gitignore  README.md
scripts/: README.md  activate.sh  bootstrap-env.sh  bootstrap-storage.sh  cleanup.sh  lib.sh
training/image-classifier-finetuning/: Makefile  README.md
training/image-classifier-finetuning/src/: train.py
training/image-classifier-finetuning/src/configs/: config_prod.yaml
