[project]
name = "nebius-video-transcription-pipeline"
version = "0.1.0"
description = "Prefect pipeline for video transcription with Nebius AI Jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "nebius>=0.3.0",
    "prefect>=3.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_transcriber_pipeline"]
