[project]
name = "lerobot-finetune-job"
version = "0.1.0"
description = "Fine-tune LeRobot policies with optional S3 upload."
requires-python = ">=3.12"
dependencies = [
    "lerobot[pusht]>=0.5.1,<0.6",
    "boto3>=1.34,<1.35",
    "pydantic>=2.6,<3",
    "rich>=13.7,<14",
    "typer==0.12.5",
    "click>=8.1.3,<8.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]  # import sorting

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]

[dependency-groups]
dev = ["pre-commit>=4,<5", "ruff>=0.8,<0.9"]
